--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,200..900;1,700">
     <title>Create TanStack App - frontend</title>
   </head>
   <body>
