--- a/backend/api-documentation/index.html
+++ b/backend/api-documentation/index.html
@@ -6,6 +6,6 @@
     <script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
   </head>
   <body>
-    <redoc spec-url="api-documentation.yaml"></redoc>
+    <redoc spec-url="/backend/api-documentation/api-documentation.yaml"></redoc>
   </body>
 </html>
